objects/ASI_CRM_KR_Listed_Menu_Price__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_KR_Clone_From_Last_Quarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone From Last Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to avoid duplicate</description>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Venue__c</fullName>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_KOR_Venue</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Listed_Menu_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_KOR_LMP_Report_Venue_Name__c</fullName>
        <formula>HYPERLINK(
  IF(
      CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
      &apos;https://&apos;+
      MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-4,4)
      +&apos;salesforce.com/&apos;,
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
  ) + ASI_CRM_KR_Venue__r.Id, 
   ASI_CRM_KR_Venue__r.Name &amp; &quot; (&quot; &amp; ASI_CRM_KR_Venue__r.ASI_KOR_Customer_Code__c &amp; &quot;)&quot;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Name</label>
        <type>Text</type>
    </fields>
    <label>Listed Menu Product Entry</label>
    <listViews>
        <fullName>ASI_CRM_KR_Listed_Menu_Product</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_Fiscal_Year__c</columns>
        <columns>ASI_CRM_KR_Quarter__c</columns>
        <columns>ASI_CRM_KR_Venue__c</columns>
        <columns>ASI_CRM_KR_Clone_From_Last_Quarter__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_KR_Listed_Menu_Price__c.ASI_CRM_KR</value>
        </filters>
        <label>KR Listed Menu Product</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LM-{00000}</displayFormat>
        <label>Listed Menu Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listed Menu Products Entries</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_KR</fullName>
        <active>true</active>
        <label>CRM KR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_KR_ForbidUpdateDateRange</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(  ASI_CRM_KR_Fiscal_Year__c  ) || ISCHANGED(  ASI_CRM_KR_Quarter__c  ))</errorConditionFormula>
        <errorMessage>Update of  Fiscal Year / Quarter is not allowed.</errorMessage>
    </validationRules>
</CustomObject>